(dirs tools client services static static/css)

(executable
 (name blibli)
 (modes
  (byte plugin)
  (native plugin))
 (libraries eliom.server ocsipersist.sqlite services)
 (embed_in_plugin_libraries services)
 (preprocess
  (pps
   lwt_ppx
   js_of_ocaml-ppx_deriving_json
   ocsigen-ppx-rpc
   --rpc-raw
   eliom.ppx.server)))

(rule
 (alias blibli)
 (deps
  blibli.cma
  client/blibli.bc
  client/blibli.bc.js
  tools/check_modules.ml
  dist)
 (action
  (run ocaml tools/check_modules.ml blibli)))

(env
 (_
  (flags
   (:standard -w -9-37-39))))

(rule
 (target
  (dir dist))
 (action
  (progn
   (bash
    "mkdir -p dist/{lib/blibli,var/{{log,data,www}/blibli,www/blibli/css,run}}")
   (bash "cp %{dep:blibli.cmxs} dist/lib/blibli/blibli.cmxs")
   (bash "cp %{dep:client/blibli.bc.js} dist/var/www/blibli/blibli.js")
   (bash
    "cp %{dep:static/css/blibli.css} dist/var/www/blibli/css/blibli.css"))))
